--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
+		<finalname> springboot-security </finalname>
 	</build>
 
 </project>
