--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -9,10 +9,10 @@
 name: Java CI with Maven SpringBoot Security
 
 on:
-  push:
-    branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
+  
+workflow_dispatch
+
+
 
 jobs:
   build:
