--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -10,8 +10,10 @@ name: Java CI with Maven SpringBoot Security
 
 on:
   
-workflow_dispatch
-
+ push:
+    branches: [ "master" ]
+ pull_request:
+    branches: [ "master" ]
 
 
 jobs:
